Fix "beta" badge on mobile (#320)
* Remove unneeded title node in navbar

* Fix 'beta' badge colour on mobile sidebar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -317,4 +317,6 @@ html[data-theme="light"] .navbar__brand {
 .badge--warning,
 .badge--warning:hover {
   color: var(--ifm-button-color) !important;
+  /* Fixes the background color on mobile */
+  background-color: var(--ifm-color-warning) !important;
 }
